Fixed the overflow of the site

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,6 @@
 body{
     height: 7000px;
+    overflow-x: hidden;
 }
 .headderbox{
     /* border: solid black 2px; */
